<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="licenseBtn">Add License</string>
    <string name="vehicleBtn">Add Vehicle</string>
    <string name="actsBtn">Add Acts</string>
    <string name="consBtn">Consumables</string>
    <string name="headerTitle">Drive Smart</string>
    <string name="subHeader">Manage your vehicle</string>
    <string name="loginHeader">Enter your user</string>
    <string name="userHint">Email</string>
    <string name="passHint">Password</string>
    <string name="loginBtn">Login</string>
    <string name="notRegTxt">Not registered yet?</string>
    <string name="signUpTxt">Sign Up!</string>
    <string name="registerHeader">Register your user</string>
    <string name="birthTxt">Date of birth</string>
    <string name="userDetailTxt">User Details</string>
    <string name="licenseHeader">Add your driver\'s license</string>
    <string name="type1">AM</string>
    <string name="type2">A1</string>
    <string name="type3">A2</string>
    <string name="type4">A</string>
    <string name="type5">B1</string>
    <string name="type6">B</string>
    <string name="type7">BE</string>
    <string name="type8">C1</string>
    <string name="type9">C</string>
    <string name="type10">C1E</string>
    <string name="type11">CE</string>
    <string name="type12">D</string>
    <string name="vehicleHeader">Add your vehicle</string>
    <string name="vehicleBrandHeader">Brand</string>
    <string name="vehicleModelHeader">Model</string>
    <string name="vehicleFuelHeader">Fuel type</string>
    <string name="typeDiesel">Diesel</string>
    <string name="typePetrol">Petrol</string>
    <string name="vehicleYearHeader">Release Year</string>
    <string name="vehicleBodyHeader">Vehicle Body</string>
    <string name="sedanType">Sedan</string>
    <string name="hatchbakType">Hatchback</string>
    <string name="breakType">Break</string>
    <string name="suvType">SUV</string>
    <string name="addVehicle">Add Vehicle</string>
    <string name="vehicleCapHeader">Cilindric Capacity</string>
    <string name="currency">RON</string>
    <string name="appTitle">Overdrive</string>
    <string name="fuelComputerHeader">Fuel Calculator</string>
    <string name="distanceHeader">Distance(KM)</string>
    <string name="consumptionHeader">Consumption(l/100 km)</string>
    <string name="gasPriceHeader">Fuel price(RON 1/l)</string>
    <string name="actsHeader">Add your car\'s acts</string>
    <string name="optionRCA">Add RCA Assurance</string>
    <string name="optionCasco">Add Casco Assurance</string>
    <string name="optionITP">Add Technial Inspection</string>
    <string name="rememberUser">Remember me</string>
    <string name="indPass">Type in your new password:</string>
    <string name="headerCons">Add consumable</string>
    <string name="OilColor">Oil - Black</string>
    <string name="CoolantColor">Coolant - Red</string>
    <string name="FreonColor">Freon - Blue</string>
    <string name="FluidColor">Brake Fluid - Yellow</string>
    <string name="PadsColor">Brake Pads - Green</string>
    <string name="emptyActs">No acts added yet</string>
    <string name="startDate">Start Date</string>
    <string name="endDate">End Date</string>
    <string name="btnDelCharTxt">Delete data</string>
    <string name="pie">Pie Chart</string>
    <string name="add">Add</string>
    <string name="verif">Verify password...</string>
    <string name="typepass">Type your password...</string>
    <string name="typeEmail">Type your email...</string>
    <string name="typeSurname">Type your surname...</string>
    <string name="typeName">Type your name...</string>
    <string name="county">County...</string>
    <string name="cityBirth">City of birth...</string>
    <string name="agreement">I agree with the terms...</string>
    <string name="type">Type</string>
    <string name="carDummy">Car</string>
    <string name="DateDummy">Date</string>
    <string name="todo">TODO</string>
    <string name="petrolDummy">Petrol</string>
    <string name="dieselDummmy">Diesel</string>
    <string name="etName">Edit your name...</string>
    <string name="edit_your_surname">Edit your surname...</string>
    <string name="edit_your_email">Edit your email...</string>
    <string name="change_password">Change password</string>
    <string name="update">Update</string>
    <string name="input_km">Input km...</string>
    <string name="input_consumption">Input consumption...</string>
    <string name="input_price">Input price...</string>
    <string name="compute">Compute</string>
    <string name="name_surname">Name Surname</string>
    <string name="birth">Birth</string>
    <string name="city">City</string>
    <string name="countyPh">County</string>
    <string name="issued">Issued</string>
    <string name="expires">Expires</string>
    <string name="police_station">Police Station</string>
    <string name="license_id">License Id</string>
    <string name="personal_id">Personal Id</string>
    <string name="license_types">License Types</string>
    <string name="main_menu">Main Menu</string>
    <string name="update_your_password">Update your password</string>
    <string name="your_new_password">Your new password...</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>

</resources>