<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DistanceComputerFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="8dp"
        app:cardMaxElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/fuelComputerHeader" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/distanceHeader" />

            <EditText
                android:id="@+id/etInputDistance"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/input_km"
                android:inputType="text"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/consumptionHeader" />

            <EditText
                android:id="@+id/etInputConsumption"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/input_consumption"
                android:inputType="text"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="1dp"
                android:fontFamily="@font/montserrat"
                android:text="@string/gasPriceHeader" />

            <EditText
                android:id="@+id/etInputGasPrice"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/edit_bg"
                android:ems="10"
                android:hint="@string/input_price"
                android:inputType="text"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp" />

            <Button
                android:id="@+id/btnComputePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:text="@string/compute"
                style="@style/customButton"
                android:textColor="#fff"/>

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:textSize="18sp"
                android:textColor="#000"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:drawableLeftCompat="@drawable/gas_icon" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>