<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="100">

    <ImageView
        android:gravity="center"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:id="@+id/imgGasBrand"
        android:layout_weight="66.6"
        android:contentDescription="@string/todo" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="33.3">

        <TextView
            android:gravity="center"
            android:textSize="17sp"
            android:textColor="#005F6A"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/petrolDummy"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />

        <TextView
            android:gravity="center"
            android:fontFamily="@font/montserrat"
            android:textColor="#005F6A"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:id="@+id/tvGasPrice"/>


        <TextView
            android:gravity="center"
            android:text="@string/dieselDummmy"
            android:textColor="#000"
            android:textSize="17sp"
            android:fontFamily="@font/montserrat_bold"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:gravity="center"
            android:textSize="16sp"
            android:fontFamily="@font/montserrat"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textColor="#000"
            android:id="@+id/tvDieselPrice"
            />

    </LinearLayout>



</LinearLayout>