<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activties.ConsuamblesActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_bg"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        app:cardBackgroundColor="#b33939"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:srcCompat="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view_bg"
        app:layout_constraintVertical_bias="0.47">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/customHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/style_header"
                    android:fontFamily="@font/montserrat"
                    android:text="@string/headerCons"
                    android:textSize="16dp" />

                <Spinner
                    android:id="@+id/spConsTypes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <EditText
                    android:id="@+id/etConsPrice"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/edit_bg"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="Price"
                    android:inputType="text"
                    android:padding="8dp" />


                <Button
                    android:id="@+id/btnSubCons"
                    style="@style/customButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/add"

                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btnPieChart"
                    style="@style/customButton"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/pie"
                    android:textColor="#fff" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>